--- a/src/index.scss
+++ b/src/index.scss
@@ -10,14 +10,14 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --black: #04152d;
-  --black2: #041226;
-  --black3: #020c1b;
-  --black-lighter: #1c4b91;
-  --black-light: #173d77;
+  --black: #0b0c0e;
+  --black2: #7d8492;
+  --black3: #000000;
+  --black-lighter: #141b25;
+  --black-light: #080b11;
   --pink: #da2f68;
   --orange: #f89e00;
-  --gradient: linear-gradient(98.37deg, #f89e00 0.99%, #da2f68 100%);
+  --gradient: linear-gradient(98.37deg, #201a09 0.99%, #da2f68 100%);
 }
 
 * {
